SAKIII-2919 Finish up the widget by adding in dividers between boxes, collapse widget by default, add to unit tests, added comments, minor layout fixes and added tags

--- a/devwidgets/categories/css/categories.css
+++ b/devwidgets/categories/css/categories.css
@@ -30,7 +30,6 @@
 .categories_widget #categories_expand_contract .categories_contract {background:url("/devwidgets/categories/images/categories_contract.png") repeat-x top left transparent;}
 .categories_widget #categories_expand_contract {background:url("/dev/images/explore_choose_category_bg.png") repeat-x scroll left top transparent;border-radius:0 0 2px 2px;-moz-border-radius:0 0 2px 2px;-webkit-border-radius:0 0 2px 2px;color: #FFFFFF;display: inline-block;float: right;height: 38px;line-height: 38px;padding: 0 20px;cursor:pointer;margin-right:20px;margin-top:20px;}
 
-
 /* Content Style */
 .categories_widget .categories_item a.s3d-regular-links {color:#38b6ee;font-size:12px;}
 .categories_widget .categories_item a.categories_item_header_link{font-size: 17px;}
@@ -40,6 +39,7 @@
 .categories_widget .categories_item .categories_item_tags {color:#ccc;background:url("/dev/images/tag_icon.png") no-repeat scroll left center transparent;display:block;margin-top:10px;padding-left:20px;}
 .categories_widget .categories_item .categories_item_tags a.s3d-regular-links {font-size:11px;}
 .categories_widget .categories_vertical_divider {background-color:#5B5A5A;float:right;height:170px;margin-right:3px;margin-top:24px;width:1px;}
+.categories_widget .categories_item .categories_tag_divider {margin:0 3px 0 7px;}
 
 /* Carousel */
 .categories_widget #categories_items_scroll .categories_items_scroll_scrollbutton {width:11px;height:11px;margin:0 3px;float:left;cursor:pointer;background:url("/devwidgets/categories/images/categories_carousel_selected.png") repeat-x top left transparent;}
